--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainbow Guess</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap"
+        rel="stylesheet">
     <script src="action.js" defer></script>
 </head>
 
@@ -19,7 +24,12 @@
             </div>
             <div class="imageDisplay">
                 <div class="lifeLine"></div>
-
+                <div class="lives">
+                    <ion-icon class="shell" name="heart"></ion-icon>
+                    <ion-icon class="fullLive" name="heart"></ion-icon>
+                    <ion-icon class="halfLive" name="heart-half"></ion-icon>
+                    <ion-icon class="emptyLive" name="heart-outline"></ion-icon>
+                </div>
                 <p class="riddle">No matter how you shift it, it remains the same</p>
             </div>
 
@@ -64,6 +74,8 @@
             </div>
         </div>
     </main>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
