--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainbow Guess</title>
+    <title>Food for Thought</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
                     <ion-icon class="halfLive" name="heart-half"></ion-icon>
                     <ion-icon class="emptyLive" name="heart-outline"></ion-icon>
                 </div>
-                <p class="riddle">No matter how you shift it, it remains the same</p>
+                <p class="riddle"></p>
             </div>
 
         </div>
